# webcam-proxy

./: .gitignore  .travis.yml  CONTRIBUTING.md  Cargo.toml  Cross.toml  LICENSE  LICENSE-MIT  Makefile  README.md  config.example.toml  helsinki.toml  nginx.conf
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: cd.yml  ci.yml
ci/: script.sh
contrib/: example.service
scripts/: download_latest_release.sh
scripts/docker/: Cross.toml  Makefile  README.md  create_dockerfile.sh  update_docker_hub_descriptions.sh
scripts/docker/x86_64-pc-windows-gnu/: Dockerfile
scripts/docker/x86_64-unknown-linux-gnu/: Dockerfile
src/: lib.rs  main.rs
