[package]
name = 'webcam-proxy'
version = '0.1.2'
authors = ['Sami Salonen']
edition = '2018'
description = 'webcam-proxy mandatory description'
repository = 'https://github.com/ssalonen/webcam-proxy'
license = 'MIT OR Apache-2.0'

[dependencies]
image = '0.23.12'
imageproc = '0.22.0'
hyper = '0.13.9'
bytes = '0.5.6'
lazy_static = '1.4.0'
hyper-tls = '0.4.3'
toml = '0.5.8'
url = '2.2.0'
rusttype = '0.9.2'
rand = '0.8.0'
thiserror = '1.0.22'
futures = '0.3.8'
tracing = '0.1.22'
tracing-futures = '0.2.4'
humantime = '2.0.1'
chrono = '0.4.19'
time = '0.1'
img_hash = '3.1.0'
tokio-compat-02 = '0.1.2'

[dependencies.tracing-subscriber]
version = '0.2.15'
features = ['env-filter']

[dependencies.tokio]
version = '0.3.6'
features = [
    'time',
    'stream',
    'fs',
    'sync',
    'io-util',
    'rt-multi-thread',
]

[dependencies.serde]
version = '1.0.118'
features = ['derive']
