[package]
name = 'webcam-proxy'
version = "0.1.7"
authors = ['Sami Salonen']
edition = '2018'
description = 'webcam-proxy mandatory description'
repository = 'https://github.com/ssalonen/webcam-proxy'
license = 'MIT OR Apache-2.0'

[dependencies]
# image=0.24.0 probably resolved the vulnerability with linear algebar
# ...but img_hash is still not compatible: https://github.com/abonander/img_hash/issues/52
# ...  thus workaround employed in code to convert image struct between crate
#      versions
image = '0.24.0'
imageproc = '0.23.0'
bytes = '1.0.0'
lazy_static = '1.4.0'
hyper-tls = '0.5.0'
toml = '0.5.8'
url = '2.2.0'
rusttype = '0.9.2'
rand = '0.8.0'
thiserror = '1.0.23'
futures = '0.3.8'
tracing = '0.1.22'
tracing-futures = '0.2.4'
humantime = '2.0.1'
img_hash = '3.1.0'
# https://docs.rs/tokio/1.0.1/tokio/stream/index.html#why-was-stream-not-included-in-tokio-10
tokio-stream = '0.1.0'
chrono-tz = '0.6.1'

[dependencies.tracing-subscriber]
version = '0.3.9'
features = ['env-filter']

[dependencies.hyper]
version = '0.14.2'
features = ['client', 'server', 'http1', 'stream']

[dependencies.tokio]
version = '1.0.1'
features = ['time', 'fs', 'sync', 'io-util', 'rt-multi-thread']

[dependencies.serde]
version = '1.0.118'
features = ['derive']

[dependencies.chrono]
version = '0.4.19'
default-features = false
features = ['clock']
